# bot_sheduller

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose .yml.prod  docker-compose.yml  pyproject.toml  requirements.txt
documentation/: api.txt  микросервис web ui.txt  полезные команды.txt  что сделанно.txt
src/api/: admin.py  auth.py  main.py
src/bot/: main.py
src/core/: config.py
src/db/: models.py  session.py
src/db/migrations/: env.py
src/web/: README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
src/web/.next/: _events.json  app-build-manifest.json  prerender-manifest.json  trace
src/web/.next/cache/: config.json
src/web/.next/server/: app-paths-manifest.json  server-reference-manifest.json  webpack-runtime.js
src/web/.next/server/app/: page.js  page_client-reference-manifest.js
src/web/.next/server/vendor-chunks/: sonner.js  use-sync-external-store.js  zustand.js
src/web/.next/static/chunks/: webpack.js
src/web/.next/static/webpack/: webpack.3745faac3b7ecfbd.hot-update.js  webpack.396c8aa73e51b419.hot-update.js  webpack.4f87be733489bc94.hot-update.js  (+9 more)
src/web/.next/types/: routes.d.ts  validator.ts
src/web/app/: layout.tsx  page.tsx
src/web/app/bookings/: page.tsx
src/web/app/login/: page.tsx
src/web/app/slots/: page.tsx
src/web/app/teachers/: page.tsx
src/web/components/: Header.tsx
src/web/docker/: Dockerfile  nginx.conf
src/web/lib/: api.ts  auth.tsx  types.ts
src/worker/: celery_app.py  tasks.py
(+23 files in other folders)
