[tool.poetry]
name = "crm-schedule-bot"
version = "0.1.0"
description = "Telegram бот расписания: Aiogram + FastAPI + PostgreSQL + Celery"
authors = ["You <you@example.com>"]


[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.4"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.30"}
SQLAlchemy = "^2.0"
psycopg = {version = "^3.2", extras = ["binary"]}
pydantic = "^2.8"
python-dotenv = "^1.0"
redis = "^5.0"
celery = "^5.3"
email-validator = "^2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.0"
ruff = "^0.5"
alembic = "^1.13"
pytest = "^8.0"
httpx = "^0.27"